# fragview

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  fragview.1  fragview.desktop
.github/workflows/: main.yml
client/: CMakeLists.txt
client/fragview/: CMakeLists.txt
client/fragview/include/: Config.h  FragView.h  IRenderPipelineBase.h  Node.h  Prerequisites.h  RenderPipelineSandBox.h  SandBoxSubScene.h  Sandbox.h  ShaderLoader.h  UserEvent.h
client/fragview/src/: Config.cpp  FragView.cpp  RenderPipelineSandBox.cpp  SandBoxSubScene.cpp  ShaderLoader.cpp  main.cpp
client/include/: FragView.h  IRenderPipelineBase.h  Prerequisites.h  ShaderLoader.h
client/qfragview/: AssetView.ui  CMakeLists.txt  FragWindow.h  LogView.ui  main.cpp  mainwindow.ui  preference.ui
client/src/: FragView.cpp  RenderPipelineSandBox.cpp  ShaderLoader.cpp
include/: ConfigDefaultOptions.h  FragView.h  OptionDicSet.h  RenderPipelineSandBox.h  SDLDisplay.h  SDLRendererWindow.h  Sandbox.h
samples/: wave.frag
samples/clc/: bilateral.cl  sepia.cl  sobeedgedectection.cl
samples/glsl/: bilateral.frag  dof.frag  fractal.frag  glow.frag  guassian.frag  hguassian.frag  mandelbrot.comp  mandelbrot.frag  sepia.comp  sepia.frag  sobelEdgeDetection.comp  vguassian.frag  wave.frag
samples/spirv/: guassian.spv
scripts/: newshad.sh
shaders/glsl/: display.frag  display.vert
src/: Config.cpp  ConfigDefaultOptions.cpp  FragView.cpp  RenderPipelineSandBox.cpp  SDLDisplay.cpp  SDLRendererWindow.cpp  SandBoxSubScene.cpp
test/: CMakeLists.txt
test/include/: IConfigTest.h  common.h
test/src/: Config.cpp  common.cpp  main.cpp
