# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB HEADER_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)

# Create default shader zip file.
SET( SHADERZIP "fragview-internal-asset" )
SET( SHADERZIPFILE "${SHADERZIP}.zip" )


#
ADD_EXECUTABLE(fragview ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(fragview fragengine fragcore-videoplayback fragcore-window-sdl )
TARGET_INCLUDE_DIRECTORIES(fragview PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
	$<INSTALL_INTERFACE:include>
)
TARGET_COMPILE_DEFINITIONS(fragview PRIVATE FRAGVIEW_INTERNAL_ASSET_FILENAME="${SHADERZIPFILE}")
ADD_DEPENDENCIES(fragview fragengine)
