
FILE(GLOB EDITOR_SOURCE_FILES   ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
                                ${CMAKE_CURRENT_SOURCE_DIR}/src/Tools/*.cpp)
FILE(GLOB EDITOR_HEADER_FILES   ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB RES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/*.ui)

#TODO set to the target instead of a global include!
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Network Widgets)

#IF(Qt5Widgets_FOUND)
	FILE(GLOB QT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/QT/*.cpp)

        #TODO resolve
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
        ADD_EXECUTABLE(qfragview ${EDITOR_SOURCE_FILES} ${EDITOR_HEADER_FILES} ${QT_SOURCE_FILES} ${RES_FILES})

        TARGET_LINK_LIBRARIES(qfragview Qt5::Widgets fragengine)

	TARGET_COMPILE_OPTIONS(qfragview PRIVATE
			${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS} -DFRAG_EDITOR_QT_WINDOW_MANAGER=1)

        set_target_properties(Qt5::Core PROPERTIES MAP_IMPORTED_CONFIG_COVERAGE "RELEASE")

	TARGET_INCLUDE_DIRECTORIES(qfragview PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/include/ ${Qt5Widgets_INCLUDE_DIRS})

	ADD_DEPENDENCIES(qfragview fragview fragengine)
	INSTALL(TARGETS qfragview DESTINATION bin)

#ELSE()
        #MESSAGE(FATAL_ERROR "Could not locate QT5 Version")
#ENDIF()

#
IF(UNIX)

ENDIF()
