FIND_PACKAGE(Qt5 COMPONENTS Widgets DBus Core Charts Network REQUIRED)

SET_TARGET_PROPERTIES(Qt5::Core PROPERTIES MAP_IMPORTED_CONFIG_COVERAGE "RELEASE")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_AUTOUIC ON)


IF(CMAKE_VERSION VERSION_LESS "3.7.0")
    SET(CMAKE_INCLUDE_CURRENT_DIR ON)
ENDIF()


FILE(GLOB SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Styles/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Widgets/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/Dialogs/*.cpp
)

FILE(GLOB HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Core/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/Styles/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/Widgets/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/Dialogs/*.h
)

FILE(GLOB UI_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Core/*.ui
	${CMAKE_CURRENT_SOURCE_DIR}/Styles/*.ui
	${CMAKE_CURRENT_SOURCE_DIR}/Widgets/*.ui
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/*.ui
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/Dialogs/*.ui
)


FILE(GLOB RESOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/Resources/*.qrc
)

qt5_add_resources(SOURCES ${RESOURCE_FILES})

ADD_EXECUTABLE(qfrafview ${UI_FILES}  ${SOURCE_FILES} ${SOURCES})

SET_PROPERTY(TARGET qfrafview  PROPERTY AUTOMOC ON)

SET_PROPERTY(TARGET qfrafview  APPEND PROPERTY
  INTERFACE_AUTOUIC_OPTIONS ${autouic_options}
)

TARGET_INCLUDE_DIRECTORIES(qfrafview  PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/Core
	${CMAKE_CURRENT_SOURCE_DIR}/Styles
	${CMAKE_CURRENT_SOURCE_DIR}/Widgets
	${CMAKE_CURRENT_SOURCE_DIR}/Windows
	${CMAKE_CURRENT_SOURCE_DIR}/Windows/Dialogs
	${Qt5Widgets_PRIVATE_INCLUDE_DIRS}
	${Qt5Widgets_INCLUDE_DIRS}
	${QtCharts_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(qfrafview PUBLIC fragview fragcore-io-serial fragcore PRIVATE Qt5::Core Qt5::Widgets Qt5::DBus Qt5::Charts Qt5::Network )
ADD_DEPENDENCIES(qfrafview fragview fragcore Qt5::Core Qt5::Widgets Qt5::DBus Qt5::Charts Qt5::Network)
